@@ -22,6 +22,8 @@ Summary of important user-visible changes for statistics 1.5.0:
  
  ** grpstats (complementary to manova1)
  
+ ** kstest2 (fully Matlab compatible. bug #56572)
+ 
  ** libsvmread, libsvmwrite (I/O functions for LIBSVM data files)
  
  ** manova1 (fully Matlab compatible)
@@ -94,6 +96,8 @@ Summary of important user-visible changes for statistics 1.5.0:
  ** anova (replaced by anova1)
  
  ** caseread, casewrite (do not belong here)
+ 
+ ** kolmogorov_smirnov_test_2 (replaced by kstest2)
  
  ** kruskal_wallis_test (replaced by kruskalwallis)
  
